--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build": "parcel build *.html"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/preset-react": "^7.0.0",
     "lodash": "^4.17.11",
     "parcel-bundler": "^1.11.0",
+    "prettier": "1.16.4",
     "sass": "^1.16.1"
   },
   "dependencies": {
