--- a/package.json
+++ b/package.json
@@ -14,14 +14,22 @@
   "devDependencies": {
     "@babel/core": "^7.4.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@vue/component-compiler-utils": "^2.6.0",
     "lodash": "^4.17.11",
     "parcel-bundler": "^1.11.0",
     "prettier": "1.16.4",
-    "sass": "^1.16.1"
+    "sass": "^1.16.1",
+    "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
     "flatbush": "^3.1.1",
     "leaflet": "^1.4.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "vue": "^2.6.10",
+    "vue-hot-reload-api": "^2.3.3",
+    "vue2-leaflet": "^2.0.2"
+  },
+  "prettier": {
+    "trailingComma": "es5"
   }
 }
