--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "flatbush": "^3.1.1",
     "leaflet": "^1.4.0",
     "normalize.css": "^8.0.1",
