--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "classnames": "^2.2.6",
     "flatbush": "^3.1.1",
     "leaflet": "^1.4.0",
+    "normalize-scss": "^7.0.1",
     "normalize.css": "^8.0.1",
+    "skeleton-sass-official": "^3.1.6",
     "vue": "^2.6.10",
     "vue-hot-reload-api": "^2.3.3",
     "vue2-leaflet": "^2.0.2"
