Disable source map to prevent build errors
https://github.com/parcel-bundler/parcel/issues/2408

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "dev": "parcel *.html",
-    "build": "parcel build *.html",
+    "dev": "parcel --no-source-maps *.html",
+    "build": "parcel build *.html --no-source-maps ",
     "prettify": "prettier --write *.js src/**.js src/**.vue"
   },
   "devDependencies": {
